--- a/parts/4_testing_and_optimization.tex
+++ b/parts/4_testing_and_optimization.tex
@@ -1,5 +1,8 @@
 \chapter{Анализ результатов тестирования и оптимизация генерируемого кода}
 
+В данном разделе проводится анализ результатов запусков тестов производительности на виртуальных машинах V8 и SpiderMonkey. 
+Кроме того, предлагаются способы оптимизации обнаруженных <<узких>> мест и описываются реализации некоторых из предложенных оптимизаций. 
+
 \section{Методика тестирования}
 
 Запуск тестов производил на компьютере со следующими характеристиками:
@@ -20,6 +23,15 @@
 
 Результаты, полученные на начальном этапе, когда еще не были сделаны никакие оптимизации, на тест Richards представленны на рисунке \ref{richards_0}.
 
+% \begin{table}[h]
+% \centering
+% \begin{tabular}[c]{|l|r|c|}
+% \hline
+%  & Время работы (мкс) & фактор \\ \hline
+% Dart & 123 & 1.0 \\ \hline
+% \end{tabular}
+% \caption{This table shows some data}
+% \end{table}
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=0.8\textwidth]{images/richards_0.png}
@@ -71,7 +83,7 @@ org: Kotlin.definePackage({
 
 % К сожалению, из-за структурных сложностей реализовать качественную оптимизацию для этого случая не удалось.
 
-Далее, можно заметить что все обращения к полям классов реализованы через функции, обычно называемые <<аксессорами>>\footnote{<<аксессором>> называют функцию предоставляющую доступ к полю объекта для его чтение(<<геттеры>>) или записи в него(<<сеттеры>>)}. Это объясняется тем, что в языке Kotlin у объектов нет полей, есть только свойства. По-умолчанию свойства имеют простую реализацию <<аксессоров>>, но пользователь может написать свою функцию <<аксессор>>. Для единообразия кода и для <<бинарной>>\footnote{Под <<бинарной>> совместимостью понимается возможность изменять код без необходимости перекомпилировать зависящие от него части}
+Далее, можно заметить что все обращения к полям классов реализованы через функции, обычно называемые <<аксессорами>>\footnote{<<аксессором>> называют функцию предоставляющую доступ к полю объекта для его чтение(<<геттеры>>) или записи в него(<<сеттеры>>)}. Это объясняется тем, что в языке Kotlin у объектов нет полей, есть только свойства. По-умолчанию свойства имеют простую реализацию <<аксессоров>>, но пользователь может написать свою функцию <<аксессор>>. Для единообразия кода и для <<бинарной>>\footnote{Под <<бинарной>> совместимостью понимается возможность изменять код одного модуля (или иной единицы компиляции) без необходимости перекомпилировать зависящие от него модули}
 совместимости компилятор транслирует все <<аксессоры>> в функции, а все обращения к свойствам -- в вызов соответствующих функций. Пример такого кода на языке Kotlin приведен в листинге \ref{accessor_example_kt}, результат компиляции данного кода приведен в листинге \ref{accessor_example_js}
 
 \begin{code}
