--- a/parts/__conclusion.tex
+++ b/parts/__conclusion.tex
@@ -18,7 +18,7 @@
 
 \null
 %todo
-Результаты работы используются в официальной версии реализации компилятора Kotlin \cite{KotlinORG}.
+Результаты данной работы используются в официальной реализации компилятора Kotlin. \cite{KotlinORG}.
 
 \null
 Оптимизации, которые пока не удалось реализовать:
@@ -36,7 +36,7 @@
 \end{center}
 \end{LARGE}
 
-Работа над компилятором Kotlin в JavaScript еще далека от завершающего этапа. В будущем, для его улучшения планируется выполнение следующих работ:
+Работа над компилятором Kotlin в JavaScript еще далека от завершающего этапа и в будущем, для его улучшения, планируется выполнение следующих работ:
 \begin{itemize}
 \item Пересмотреть реализации контейнеров в стандартной библиотеке.
 \item Продолжить оптимизацию генерируемого кода.
