--- a/parts/0_intro.tex
+++ b/parts/0_intro.tex
@@ -12,7 +12,8 @@
 \item Две константы \path{undefined} и \path{null} имеющую похожую семантику -- отсутствие какого-либо значения. 
 \item Запутанная семантика операторов сложения и сравнения.
 \item Запись в неопределенную переменную приводит к созданию глобальной переменной.
-\item Привязка областей видимости переменных к функциям, а не блокам и <<всплытие>> определений переменных и функций.
+\item Привязка областей видимости переменных к функциям, а не блокам.
+ \item <<Всплытие>> определений переменных и функций.
 \item Реализация замыканий -- когда замыкается все лексическое окружение объемлющей функции.
 \end{itemize}
 %
