--- a/bib.bib
+++ b/bib.bib
@@ -300,6 +300,11 @@ loops}},
 	howpublished = {\url{http://kotlin.jetbrains.org/}}
 }
 
+@ONLINE{SourceMap3,
+	title = {Source Map Revision 3 Proposal},
+	howpublished = {\url{https://docs.google.com/document/d/1U1RGAehQwRypUTovF1KRlpiOFze0b-_2gc6fAH0KY0k/edit}}
+}
+
 @ONLINE{something,
 	title = {},
 	howpublished = {\url{}}
