--- a/parts/__conclusion.tex
+++ b/parts/__conclusion.tex
@@ -1,6 +1,6 @@
 \startconclusionpage
 
-В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены узкие <<места>> генерируемого кода и предложены способы их устранения. Кроме того, были реализованы некоторые из предложенных оптимизаций, благодаря которым код скомпилированный с помощью компилятора Kotlin стал выдавать результаты сравнимые с результатами Dart2js. Реализованные оптимизации:
+В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены <<узкие>> места генерируемого кода и предложены способы их устранения. Кроме того, были реализованы некоторые из предложенных оптимизаций, благодаря чему код, скомпилированный с помощью компилятора Kotlin, стал выдавать результаты сравнимые с результатами Dart2js. Реализованные оптимизации:
 \begin{itemize}
 \item Оптимизирован доступ к свойствам.
 %, для свойств с акссесорами используются свойства в стиле ES5
@@ -11,22 +11,22 @@
 \item Для сравнения примитивных типов используется оператор \path{===} вместо функции \path{Kotlin.equals}.
 \item Оптимизирована функция \path{Kotlin.equals}, используемая для сравнения.
  %Еще есть кое какие идеи, которые нужно додумать, и реализовать.(но не сейчас)
-\item Было оптимизировано вычисление хеш-кода (функция \path{hashObject}).
-\item В HashMap и PrimitiveHashMap добавлена возможность использования своей функции хеширования.
+\item Оптимизировано вычисление хеш-кода (функция \path{hashObject}).
 \item Для примитивных типов используется PrimitiveHashMap.
+\item В HashMap и PrimitiveHashMap добавлена возможность использования своей функции хеширования.
 \end{itemize}
 
 \null
 %todo
-Результаты данной работы используются в официальной реализации компилятора Kotlin. \cite{KotlinORG}.
+Результаты данной работы используются в официальной реализации компилятора Kotlin \cite{KotlinORG}.
 
 \null
 Оптимизации, которые пока не удалось реализовать:
 
 \begin{itemize}
-\item Не удалось реализовать аналог импорта или предоставить оптимальный доступ хотя бы внутри пакета, поскольку не удалось найти достаточно оптимального решения для текущей структуры генерируемого кода. %Нужно  либо делать костыли, либо существенно менять структуру генерируемого кода.
+\item Аналог импорта или оптимальный доступ хотя бы внутри пакета, поскольку не удалось найти достаточно оптимального решения для текущей структуры генерируемого кода. %Нужно  либо делать костыли, либо существенно менять структуру генерируемого кода.
 
-\item Для случая когда в качестве ключа используется закрытый класс, в котором не определена своя реализация функции \path{hashCode}, не удалось реализовать использование \path{PrimitiveHashMap}.
+\item Для случая, когда в качестве ключа используется закрытый класс, в котором не определена своя реализация функции \path{hashCode}, не удалось реализовать использование \path{PrimitiveHashMap}.
 \end{itemize}
 
 \null
@@ -36,14 +36,11 @@
 \end{center}
 \end{LARGE}
 
-Работа над компилятором Kotlin в JavaScript еще далека от завершающего этапа и в будущем, для его улучшения, планируется выполнение следующих работ:
+Работа над компилятором Kotlin в JavaScript еще далека от завершающего этапа, и в будущем для его улучшения планируется следующее:
 \begin{itemize}
 \item Пересмотреть реализации контейнеров в стандартной библиотеке.
 \item Продолжить оптимизацию генерируемого кода.
-\item Написать новые бенчмарки. 
-\item Сделать чтобы генерируемый код был более идеомотичным для JavaScript (улучшить структуру генерируемого кода).
-\item Добавить поддержку технологии source-map для удобной отладки сгенерированного кода.
-\item Реализовать конструкции языка Kotlin отсутствующие в JavaScript компиляторе.
-\item Реализовать оптимизации на основе Continuation-passing style и 
-Static single assignment.
+\item Написать новые тесты производительности. 
+\item Сделать генерируемый код более идеоматичным для JavaScript (улучшить структуру генерируемого кода).
+\item Добавить поддержку технологии source-map \cite{SourceMap3} для удобной отладки сгенерированного кода.
 \end{itemize}
